--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "/src/app.js",
   "type": "module",
   "scripts": {
-    "dev":"node --watch src/app.js",
-    "start":"node src/app.js",
+    "dev": "node --watch src/app.js",
+    "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -16,5 +16,10 @@
     "js"
   ],
   "author": "{ JEBC-DeV }",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^5.0.1"
+  }
 }
