--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   "author": "{ JEBC-DeV }",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^6.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
     "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "prisma": "^6.2.1"
   }
 }
