--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 APP_PORT=4000
 BCRYPT_SALT=10
+JWT_SECRET=aVerySecretString
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
